strapi/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-strapi-deployment
  namespace: strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-strapi
  template:
    metadata:
      labels:
        app: mongo-strapi
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db/
              name: mongo-strapi-volume
      volumes:
        - name: mongo-strapi-volume
          persistentVolumeClaim:
            claimName: mongo-strapi-volume
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-strapi-svc
  namespace: strapi
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: mongo-strapi
