strapi/strapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-deployment
  namespace: strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
        - name: strapi
          image: strapi/strapi
          ports:
            - containerPort: 1337
          volumeMounts:
            - mountPath: /srv/app/
              name: strapi-volume
      volumes:
        - name: strapi-volume
          persistentVolumeClaim:
            claimName: strapi-volume
---
apiVersion: v1
kind: Service
metadata:
  name: strapi-svc
  namespace: strapi
spec:
  type: ClusterIP
  ports:
    - port: 1337
      targetPort: 1337
      protocol: TCP
  selector:
    app: strapi
